@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-07T16:17:03Z",
-  "count_outdated" : 3477,
-  "uniques_outdated" : 634,
-  "count" : 3598,
-  "uniques" : 657,
+  "timestamp" : "2024-05-09T01:04:11Z",
+  "count_outdated" : 3499,
+  "uniques_outdated" : 641,
+  "count" : 3622,
+  "uniques" : 658,
   "views" : [
-    {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 22,
-      "count_minmax": [ 20, 22 ],
-      "count_decinc": [ 0, 22 ],
-      "uniques": 7,
-      "uniques_minmax": [ 6, 7 ],
-      "uniques_decinc": [ 0, 7 ]
-    },
     {
       "timestamp": "2024-04-25T00:00:00Z",
       "count": 15,
@@ -118,6 +109,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-08T00:00:00Z",
+      "count": 24,
+      "count_minmax": [ 24, 24 ],
+      "count_decinc": [ 0, 24 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
