@@ -1,12 +1,7 @@
 {
-  "count": 121,
-  "uniques": 20,
+  "count": 123,
+  "uniques": 15,
   "views": [
-    {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 22,
-      "uniques": 7
-    },
     {
       "timestamp": "2024-04-25T00:00:00Z",
       "count": 15,
@@ -65,6 +60,11 @@
     {
       "timestamp": "2024-05-07T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-08T00:00:00Z",
+      "count": 24,
       "uniques": 1
     }
   ]
